plugins {
    id 'java'
    id "org.sonarqube" version "3.3"
    id 'org.springframework.boot' version "2.5.7"
    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
}


sonarqube {
    properties {
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.projectKey", "testnorge-tp"
        property "sonar.projectName", "testnorge-tp"
        property "sonar.organization", "navikt"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.project.monorepo.enabled", true
        property "sonar.login", System.getenv("SONAR_TOKEN")
    }
}

bootJar {
    archiveFileName = "app.jar"
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.4'
    }
}

test {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation 'no.nav.testnav.libs:servlet-core'
    implementation 'no.nav.testnav.libs:security-core'
    implementation 'no.nav.testnav.libs:servlet-insecure-security'

    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap' // TODO remove legacy bootstrap config

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'com.google.guava:guava:31.0.1-jre'
    implementation 'org.aspectj:aspectjweaver:1.9.7'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    implementation 'net.logstash.logback:logstash-logback-encoder:7.0.1'
    implementation 'org.hibernate:hibernate-core:5.6.1.Final'
    implementation 'org.hibernate.validator:hibernate-validator'

    implementation 'io.springfox:springfox-swagger2:3.0.0'
    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
    implementation 'no.nav.registre:testnorge-consumers:1.12.0-RELEASE'

    runtimeOnly 'com.oracle.database.jdbc:ojdbc8:21.3.0.0'

    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'junit:junit:4.13.2' //TODO upgrade to JUnit5
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2:1.4.200'
    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
}

description = 'testnorge-tp'
java.sourceCompatibility = JavaVersion.VERSION_17
